Fixed layout issues

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -25,6 +25,8 @@
     p {
       font-size: var(--font-size-000);
     }
+
+    margin-bottom: var(--space-600);
   }
 
   .post &__hero + * {
@@ -40,6 +42,7 @@
 
     &__aside {
       grid-column: 2 / 3;
+      margin-bottom: 0;
     }
 
     &__main {
